; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/pf/pflogd/extr_privsep.c_sig_pass_to_chld.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/pf/pflogd/extr_privsep.c_sig_pass_to_chld.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@child_pid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @sig_pass_to_chld to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sig_pass_to_chld(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @errno, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* @child_pid, align 4
  %6 = icmp ne i32 %5, -1
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @child_pid, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @kill(i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load i32, i32* %3, align 4
  store i32 %12, i32* @errno, align 4
  ret void
}

declare dso_local i32 @kill(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
